<resources>
    <string name="app_name">飲評人</string>
    <string name="action_settings">Settings</string>

    <string name="you_know_nothing">You know nothing</string>
    <string name="internet_not_connected">您尚未連接 Internet</string>

    <string name="log_in__google">Google</string>
    <string name="log_in__facebook">Facebook</string>

    <!-- menu -->
    <string name="menu_about">關於</string>
    <string name="menu_log_out">登出</string>

    <!-- bottom label -->
    <string name="label_home">飲品評論</string>
    <string name="label_radar">附近店家</string>
    <string name="label_order">揪團訂購</string>
    <string name="label_profile">個人檔案</string>
    <string name="label_detail">飲品詳情</string>
    <string name="label_home_search">飲品搜尋</string>
    <string name="label_post">發表評論</string>
    <string name="label_sign_in">登入</string>

    <!-- post page -->
    <string name="post_store">店家</string>
    <string name="post_drink">飲品</string>
    <string name="post_ice">冰塊</string>
    <string name="post_sugar">甜度</string>
    <string name="post_comment">評價</string>
    <string name="post_time">時限</string>
    <string name="post_enter_comment">輸入評論…</string>
    <string name="title_activity_maps">Map</string>
    <string name="spinner_store">請選擇店家</string>
    <string name="spinner_drink">請選擇飲品</string>
    <string name="post_button">送出評論</string>
    <string name="add_new_drink">新增飲品+</string>
    <!-- order page -->
    <string name="order_host">主揪</string>
    <string name="order_id">編號</string>
    <string name="order_status_active">開啟中</string>
    <string name="order_status_inactive">已關閉</string>
    <string name="order_status_to_active">開啟訂單</string>
    <string name="order_status_to_inactive">結束訂單</string>
    <string name="create_order">新增訂單</string>

    <!-- Fb login -->
    <string name="facebook_app_id">473522680006069</string>
    <string name="fb_login_protocol_scheme">fb473522680006069</string>
    <string name="home_page_search_bar_hint">搜尋關鍵字</string>

    <string name="add_order_dialog_title">新增品項</string>
    <string name="add_order_qty">數量</string>
    <string name="add_order_note">備註</string>
    <string name="add_order_button_text">送出品項</string>

    <string name="create_order_title">新增訂單</string>
    <string name="create_order_select_time_hint">請選擇截止時間</string>
    <string name="create_order_text_note">備註</string>

    <string name="text_drink_information">飲品資訊</string>
    <string name="near_store_branch">附近店家</string>
    <string name="navigation_to_internet">前往官網</string>
    <string name="text_five">5</string>
    <string name="text_four">4</string>
    <string name="text_three">3</string>
    <string name="text_two">2</string>
    <string name="text_one">1</string>
    <string name="text_drink_all_comment">所有評論</string>
    <string name="text_no_comment_now">此飲品目前尚無評論...</string>
    <string name="high_score_drink">最高分飲品</string>
    <string name="text_new_comment">最新評論</string>
    <string name="home_search_hint">請輸入飲品關鍵字</string>

    <string name="order_search_view_hint">查詢訂單編號</string>
    <string name="order_note">備註</string>
    <string name="button_create_order">新增品項</string>
    <string name="order_create_order">點擊我新增訂單!</string>

    <string name="post_edit_new_drink_hint">請輸入飲品名稱</string>
    <string name="camera">相機</string>
    <string name="gallery">圖庫</string>

    <string name="profile_all_comment">評論紀錄</string>
    <string name="profile_all_order">揪團紀錄</string>

    <string name="sign_in_fb">FACEBOOK 登入</string>
    <string name="sign_in_google">GOOGLE 登入</string>
    <string name="display_drink">查看飲品</string>
    <string name="sign_in_success">成功登入</string>
    <string name="sign_in_failure">登入失敗</string>
    <string name="fb_request_profile">public_profile</string>
    <string name="fb_request_email">email</string>
    <string name="share_order">分享訂單</string>
    <string name="create_order_dialog">createOrderDialog</string>
    <string name="post_success">成功送出</string>
    <string name="file_provider_path">app.jerry.drink.fileprovider</string>
    <string name="new_drink_exist">新增飲品已存在!</string>
    <string name="need_gps_permission">需要開啟GPS權限!</string>
    <string name="open_permission">前往設定</string>
    <string name="need_camera_permission">需要開啟相機權限!</string>
    <string name="permission_permanently_denied_negative_button">先不要</string>
    <string name="need_gallery_permission">需要開啟相簿權限!</string>
    <string name="choose_browser">即將開啟官網，請選擇瀏覽器</string>
    <string name="open_devices_location">請開啟裝置定位功能</string>
    <string name="devices_location_close">未開啟定位服務</string>
    <string name="please_add_pic">請新增照片唷~</string>
    <string name="order_record_text">最近開啟過的訂單 :</string>
    <string name="to_order">前往</string>

    <string-array name="list_sugar">
        <item>正常糖</item>
        <item>半糖</item>
        <item>微糖</item>
        <item>無糖</item>
    </string-array>

    <string-array name="list_ice">
        <item>正常冰</item>
        <item>去冰</item>
        <item>微冰</item>
        <item>常溫</item>
    </string-array>


</resources>
