<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_store"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/text_store"
            style="@style/post_text_title"
            android:text="@string/post_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_store" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_store"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/text_drink"
                style="@style/post_text_title"
                android:text="@string/post_drink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_drink" />

            <TextView
                android:id="@+id/text_ice"
                style="@style/post_text_title"
                android:text="@string/post_ice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@+id/text_ice"
                app:layout_constraintStart_toEndOf="@+id/text_ice"
                app:layout_constraintTop_toTopOf="@+id/text_ice" />

            <TextView
                android:id="@+id/text_sugar"
                style="@style/post_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_sugar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_ice" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="6dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@+id/text_sugar"
                app:layout_constraintStart_toEndOf="@+id/text_sugar"
                app:layout_constraintTop_toTopOf="@+id/text_sugar" />

            <TextView
                android:id="@+id/text_comment"
                style="@style/post_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_sugar" />

            <RatingBar
                android:id="@+id/rating_bar_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:progressTint="#FFD700"
                android:rating="1"
                android:scaleX=".5"
                android:scaleY=".5"
                android:stepSize="1"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintStart_toEndOf="@+id/text_comment"
                app:layout_constraintTop_toTopOf="@+id/text_comment" />

            <EditText
                android:id="@+id/response_comment_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/frame_background"
                android:hint="@string/post_enter_comment"
                android:gravity="top"
                android:lines="5"
                android:padding="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rating_bar_comment"
                app:layout_constraintTop_toBottomOf="@+id/text_comment" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>