<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="app.jerry.drink.order.CreateOrderViewModel" />

        <import type="app.jerry.drink.network.LoadApiStatus"/>
        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:onClick="@{() -> viewModel.leave(false)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:clickable="true"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_corner_r"
            android:backgroundTint="@color/White"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_create_order_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/create_order_title"
                android:textAlignment="center"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/create_order_image_store"
                style="@style/app_icon_mid"
                android:layout_marginTop="12dp"
                android:src="@drawable/store_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_create_order_title" />

            <TextView
                android:id="@+id/create_order_text_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/post_store"
                android:textSize="@dimen/text_max"
                android:textColor="@color/text_color_hint"
                app:layout_constraintBottom_toBottomOf="@+id/create_order_image_store"
                app:layout_constraintStart_toEndOf="@+id/create_order_image_store"
                app:layout_constraintTop_toTopOf="@+id/create_order_image_store" />

            <Spinner
                android:id="@+id/spinner_store"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@{viewModel.displayAllStore}"
                android:prompt="@string/spinner_store"
                android:theme="@style/add_order_drink_spinner"
                android:textSize="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/create_order_text_store"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_order_text_store"
                app:layout_constraintTop_toTopOf="@+id/create_order_text_store" />

            <ImageView
                android:id="@+id/create_order_image_time"
                style="@style/app_icon_mid"
                android:layout_marginTop="12dp"
                android:src="@drawable/clock_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_order_image_store" />

            <TextView
                android:id="@+id/create_order_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/post_time"
                android:textColor="@color/text_color_hint"
                android:textSize="@dimen/text_max"
                app:layout_constraintBottom_toBottomOf="@+id/create_order_image_time"
                app:layout_constraintStart_toEndOf="@+id/create_order_image_time"
                app:layout_constraintTop_toTopOf="@+id/create_order_image_time" />

            <TextView
                android:id="@+id/create_order_text_select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/create_order_select_time_hint"
                android:text="@={viewModel.selectTime}"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/create_order_text_time"
                app:layout_constraintStart_toEndOf="@+id/create_order_text_time"
                app:layout_constraintTop_toTopOf="@+id/create_order_text_time" />

            <ImageView
                android:id="@+id/create_order_image_note"
                style="@style/app_icon_mid"
                android:layout_marginTop="12dp"
                android:src="@drawable/notes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_order_image_time" />

            <TextView
                android:id="@+id/create_order_text_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/create_order_text_note"
                android:textSize="16dp"
                android:textColor="@color/text_color_hint"
                app:layout_constraintBottom_toBottomOf="@+id/create_order_image_note"
                app:layout_constraintStart_toEndOf="@+id/create_order_image_note"
                app:layout_constraintTop_toTopOf="@+id/create_order_image_note" />

            <EditText
                android:id="@+id/create_order_edit_text_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:text="@={viewModel.enterNote}"
                android:textSize="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/create_order_text_note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_order_text_note" />

            <TextView
                android:id="@+id/button_create_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_post_button"
                android:clickable="@{viewModel.postStatus == LoadApiStatus.LOADING ? false:true}"
                android:enabled='@{viewModel.selectTime == "" ? false:true}'
                android:fontFamily="@font/noto_sans"
                android:onClick="@{() -> viewModel.createOrderResult()}"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text='@{viewModel.postStatus == LoadApiStatus.LOADING ? "": @string/create_order}'
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_order_edit_text_note" />

            <ProgressBar
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:theme="@style/ProgressThemeDark"
                android:visibility="@{viewModel.postStatus == LoadApiStatus.LOADING ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/button_create_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_create_order" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>